<resources>
    <string name="app_name">SpeakTrivia</string>
    <string name="welcome">Welcome</string>
    <string name="to">to</string>
    <string name="intro_statement">You can Control all the Action with Your Voice!!!</string>
    <string name="you_can_speak">= a command you can speak</string>
    <string name="go_home">Take Me Home</string>
    <string name="go_back">Take Me Back</string>
    <string name="intro_statement_bottom">The Speak Icon followed by raised text means all you have to do is speak and off you go!.</string>
    <string name="home_title">HOME</string>
    <string name="build_game">Build a Game</string>
    <string name="my_badges">My Badges</string>
    <string name="to_welcome">To Welcome</string>
    <string name="game_type_title">Game Type</string>
    <string name="type_traditional">Traditional</string>
    <string name="type_lightning">Lightning</string>
    <string name="type_free_play">Free Play</string>
    <string name="to_home">To Home</string>
    <string name="parameters_title">Parameters</string>
    <string name="parameters_num_questions">Number of Questions</string>
    <string name="plus">+</string>
    <string name="ten">10</string>
    <string name="comma">,</string>
    <string name="twenty">20</string>
    <string name="thirty">30</string>
    <string name="fourty">40</string>
    <string name="fifty">50</string>
    <string name="num_questions_example"> e.g. \" Number of Questions 10 \"</string>
    <string name="parameters_num_questions_select">Select the Number of Questions to Answer</string>
    <string name="to_game_type">To Game Type</string>
    <string name="parameters_select_difficulty">Select the Level of Difficulty</string>
    <string name="parameters_difficulty_level">Difficulty Level</string>
    <string name="easy">Easy</string>
    <string name="Medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="difficulty_level_example">e.g. \"Difficulty Level Easy\"</string>
    <string name="parameters_go_to_catagoriesl">Select Categories</string>
    <string name="parameters_select_time">Select the Starting Answer Time Limit (sec)</string>
    <string name="parameters_start_times">Starting Answer Time</string>
    <string name="start_time_example">e.g. \"Starting Answer Time 30\"</string>
    <string name="category_title">Categories</string>
    <string name="placeHolder">place holder</string>
    <string name="game_start">Start Game!!</string>
    <string name="placeHolder_long">This is the long place holder for the in game question. How many hours does it take to build an app!!!?</string>

    <string-array name="categories">
        <item>All</item>
        <item>History</item>
        <item>Science</item>
        <item>Music</item>
        <item>Geography</item>
        <item>Sports</item>
        <item>Entertainment</item>
        <item>Arts</item>
    </string-array>


</resources>
