<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/textBlackLight"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:id="@+id/welcome_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="50sp"
            android:textStyle="bold|italic"
            android:textColor="@color/colorAccent"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to"
            android:textSize="35sp"
            android:textStyle="bold|italic"
            android:textColor="@color/colorAccent"
            android:layout_gravity="center"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="35sp"
            android:textStyle="bold|italic"
            android:textColor="@color/colorAccent"
            android:layout_gravity="center"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/intro_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_layout"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <ImageView
            android:id="@+id/intro_star_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/gold_star_48_48"
            android:layout_gravity="center_vertical"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro_statement"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_gravity="center"
            />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/welcome_command_List"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/intro_layout"
        android:layout_marginTop="20dp"
        >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/speak_icon_35_33"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/you_can_speak"
                android:textSize="20sp"
                android:layout_marginLeft="15sp"
                android:layout_gravity="center"
                android:textColor="@android:color/white"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/speak_icon_35_33"/>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                card_view:cardCornerRadius="5dp"
                android:layout_marginLeft="20dp"
                card_view:cardElevation="20dp"
                card_view:cardBackgroundColor="@color/textBlackLight"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/go_home"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:textColor="@android:color/white"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"/>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/intro_layout_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_command_List"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <ImageView
            android:id="@+id/intro_star_image_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/gold_star_48_48"
            android:layout_gravity="center_vertical"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro_statement_bottom"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_gravity="center"
            />

    </LinearLayout>

</RelativeLayout>
