<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/textBlackLight">

    <TextView
        android:id="@+id/parameters_title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/parameters_title"
        android:textSize="50sp"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"/>

    <RelativeLayout
        android:id="@+id/parameters_commands_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3">

        <LinearLayout
            android:id="@+id/parameters_num_questions"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/parameters_num_questions_select"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:textColor="@color/textBlackDark"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"/>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/speak_icon_35_33"/>

                <android.support.v7.widget.CardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    card_view:cardCornerRadius="5dp"
                    android:layout_marginLeft="20dp"
                    card_view:cardElevation="20dp"
                    card_view:cardBackgroundColor="@color/textBlackLight"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/parameters_num_questions"
                        android:textSize="20sp"
                        android:layout_gravity="center"
                        android:textColor="@android:color/white"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"/>

                </android.support.v7.widget.CardView>

            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                >

                <android.support.v7.widget.CardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    card_view:cardCornerRadius="10dp"
                    card_view:cardElevation="20dp"
                    card_view:cardBackgroundColor="@color/textBlackLight"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/ten"
                        android:textSize="20sp"
                        android:layout_gravity="center"
                        android:textColor="@android:color/white"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"/>

                </android.support.v7.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/comma"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:textColor="@android:color/white"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:textStyle="bold"/>

                <android.support.v7.widget.CardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    card_view:cardCornerRadius="10dp"
                    android:layout_marginLeft="5dp"
                    card_view:cardElevation="20dp"
                    card_view:cardBackgroundColor="@color/textBlackLight"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/twenty"
                        android:textSize="20sp"
                        android:layout_gravity="center"
                        android:textColor="@android:color/white"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"/>

                </android.support.v7.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/comma"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:textColor="@android:color/white"
                    android:layout_marginLeft="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:textStyle="bold"/>

                <android.support.v7.widget.CardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    card_view:cardCornerRadius="10dp"
                    android:layout_marginLeft="5dp"
                    card_view:cardElevation="20dp"
                    card_view:cardBackgroundColor="@color/textBlackLight"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/thirty"
                        android:textSize="20sp"
                        android:layout_gravity="center"
                        android:textColor="@android:color/white"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"/>

                </android.support.v7.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/comma"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:textColor="@android:color/white"
                    android:layout_marginLeft="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:textStyle="bold"/>

                <android.support.v7.widget.CardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    card_view:cardCornerRadius="10dp"
                    android:layout_marginLeft="5dp"
                    card_view:cardElevation="20dp"
                    card_view:cardBackgroundColor="@color/textBlackLight"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/fourty"
                        android:textSize="20sp"
                        android:layout_gravity="center"
                        android:textColor="@android:color/white"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"/>

                </android.support.v7.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/comma"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:textColor="@android:color/white"
                    android:layout_marginLeft="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:textStyle="bold"/>

                <android.support.v7.widget.CardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    card_view:cardCornerRadius="10dp"
                    android:layout_marginLeft="5dp"
                    card_view:cardElevation="20dp"
                    card_view:cardBackgroundColor="@color/textBlackLight"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/fifty"
                        android:textSize="20sp"
                        android:layout_gravity="center"
                        android:textColor="@android:color/white"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"/>

                </android.support.v7.widget.CardView>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/num_questions_example"
                android:textSize="15sp"
                android:layout_gravity="center"
                android:textColor="@android:color/white"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"/>




        </LinearLayout>





    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        >

        <LinearLayout
            android:id="@+id/type_to_home_layout"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="15dp"

            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/speak_icon_35_33"
                android:layout_gravity="center"/>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                card_view:cardCornerRadius="5dp"
                android:layout_marginLeft="20dp"
                card_view:cardElevation="20dp"
                card_view:cardBackgroundColor="@color/textBlackLight"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/to_home"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:textColor="@android:color/white"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"/>

            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/type_to_build_game_layout"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="30dp"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/speak_icon_35_33"
                android:layout_gravity="center"/>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                card_view:cardCornerRadius="5dp"
                android:layout_marginLeft="20dp"
                card_view:cardElevation="20dp"
                card_view:cardBackgroundColor="@color/textBlackLight"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/to_welcome"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:textColor="@android:color/white"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"/>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>